RESOLVED FIXED48477
[Chromium] Crash when encountering history.back() call during Page::goToItem execution
https://bugs.webkit.org/show_bug.cgi?id=48477
Summary [Chromium] Crash when encountering history.back() call during Page::goToItem ...
Mihai Parparita
Reported 2010-10-27 15:41:23 PDT
Originally reported at http://crbug.com/59554, see the comments there for a detailed description of what happens. Test case at http://persistent.info/webkit/test-cases/crbug-59554/outer-pre.html.
Attachments
Patch (8.64 KB, patch)
2010-10-27 17:57 PDT, Mihai Parparita
no flags
Patch (8.61 KB, patch)
2010-11-01 20:44 PDT, Mihai Parparita
no flags
Mihai Parparita
Comment 1 2010-10-27 17:57:57 PDT
Mihai Parparita
Comment 2 2010-10-27 17:59:21 PDT
Darin or Brady, could you take a look at this? Alternatively, Nate, would you mind (this is the bug that made me ask you all those questions about onload handlers firing during stopAllLoaders).
Adam Barth
Comment 3 2010-10-31 18:13:50 PDT
Comment on attachment 72122 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=72122&action=review > LayoutTests/http/tests/history/resources/back-during-onload-container.html:2 > +onload = function() { Please use window.onload so we can run these tests in other browsers. > LayoutTests/http/tests/history/resources/back-during-onload-hung-page.php:1 > +<? sleep(1000); ?> Don't we need to say "<?php" ?
Mihai Parparita
Comment 4 2010-11-01 07:49:10 PDT
(In reply to comment #3) > > LayoutTests/http/tests/history/resources/back-during-onload-container.html:2 > > +onload = function() { > > Please use window.onload so we can run these tests in other browsers. This came up before (https://bugs.webkit.org/show_bug.cgi?id=46324#c11), and as far as I can tell, assigning to onload works everywhere (I prefer this style since it's easier to see which event handlers a test is using when skimming). > > LayoutTests/http/tests/history/resources/back-during-onload-hung-page.php:1 > > +<? sleep(1000); ?> > > Don't we need to say "<?php" ? This is the short_open_tag option, and it's enabled by default: http://www.php.net/manual/en/ini.core.php
WebKit Commit Bot
Comment 5 2010-11-01 18:57:42 PDT
Comment on attachment 72122 [details] Patch Rejecting patch 72122 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', 'apply-attachment', '--force-clean', '--non-interactive', 72122]" exit_code: 2 Last 500 characters of output: ung-page.php patching file LayoutTests/http/tests/history/resources/back-during-onload-middle.html patching file WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file WebCore/loader/NavigationScheduler.cpp Hunk #1 FAILED at 352. 1 out of 1 hunk FAILED -- saving rejects to file WebCore/loader/NavigationScheduler.cpp.rej patching file WebCore/page/Page.cpp Failed to run "[u'/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', u'--reviewer', u'Adam Barth', u'--force']" exit_code: 1 Full output: http://queues.webkit.org/results/4969005
Mihai Parparita
Comment 6 2010-11-01 20:44:29 PDT
Mihai Parparita
Comment 7 2010-11-01 20:45:56 PDT
Comment on attachment 72625 [details] Patch D'oh, this blew away the r+ from the previous patch. Adam, do you mind r+-ing again now that I fixed the merge conflict, so this can land through the CQ?
WebKit Commit Bot
Comment 8 2010-11-02 14:21:24 PDT
The commit-queue encountered the following flaky tests while processing attachment 72625 [details]: http/tests/appcache/update-cache.html Please file bugs against the tests. These tests were authored by ap@webkit.org. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 9 2010-11-02 14:24:03 PDT
Comment on attachment 72625 [details] Patch Clearing flags on attachment: 72625 Committed r71170: <http://trac.webkit.org/changeset/71170>
WebKit Commit Bot
Comment 10 2010-11-02 14:24:09 PDT
All reviewed patches have been landed. Closing bug.
Lucas Forschler
Comment 11 2010-12-13 17:38:19 PST
Note You need to log in before you can comment on or make changes to this bug.