LayoutTests/http/tests/history/resources/back-during-onload-hung-page.php
@@ -1,0 +1,2 @@
+<? sleep(1000); ?>
+FAIL: Should never see this
